sprint3_final update